--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -18,9 +18,9 @@ jobs:
 
     - name: Install Docker Compose
       run: |
-        sudo curl -L "https://github.com/docker/compose/releases/download/v2.22.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-        sudo chmod +x /usr/local/bin/docker-compose
-        ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose || true
+        sudo apt-get update
+        sudo apt-get install -y python3-pip
+        sudo pip3 install docker-compose
         docker-compose version  # Verify the installed version of Docker Compose
 
     - name: Log in to Docker Hub
@@ -28,6 +28,5 @@ jobs:
 
     - name: Build and push images
       run: |
-        docker compose build
-        docker compose push
-
+        docker-compose build
+        docker-compose push
